--- a/Value 1.ipynb
+++ b/Value 1.ipynb
@@ -14,13 +14,20 @@
   },
   "orig_nbformat": 2,
   "kernelspec": {
-   "name": "python_defaultSpec_1600104289762",
+   "name": "python_defaultSpec_1600767430371",
    "display_name": "Python 3.7.8 64-bit"
   }
  },
  "nbformat": 4,
  "nbformat_minor": 2,
  "cells": [
+  {
+   "source": [
+    "# Preprocess the data"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
   {
    "cell_type": "code",
    "execution_count": 1,
@@ -31,12 +38,7 @@
     "\n",
     "from pathlib import Path\n",
     "\n",
-    "from tqdm.notebook import tqdm\n",
-    "\n",
-    "from urllib.parse import urlparse\n",
-    "from urllib.request import urlopen, urlretrieve\n",
-    "\n",
-    "from zipfile import ZipFile, is_zipfile"
+    "from tqdm.notebook import tqdm"
    ]
   },
   {
@@ -68,6 +70,20 @@
    ]
   },
   {
+   "source": [
+    "## Preprocess the Wyscout data"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "The `read_json_file` function reads and returns the content of a given JSON file. The function handles the encoding of special characters (e.g., accents in names of players and teams) that the `pd.read_json` function cannot handle properly."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
@@ -77,6 +93,20 @@
     "    with open(filename, 'rb') as json_file:\n",
     "        return BytesIO(json_file.read()).getvalue().decode('unicode_escape')"
    ]
+  },
+  {
+   "source": [
+    "### Teams"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "The following cells read the `teams.json` file into a `DataFrame` object and store that object in the `wyscout.h5` HDF5 file under the key `teams`."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "code",
@@ -117,6 +147,20 @@
    ]
   },
   {
+   "source": [
+    "### Players"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "The following cells read the `players.json` file into a `DataFrame` object and store that object in the `wyscout.h5` HDF5 file under the key `players`."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
@@ -155,6 +199,20 @@
    ]
   },
   {
+   "source": [
+    "### Matches"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "The following cell lists the competitions to be included in the dataset. Uncomment the competitions that you want to include in your dataset."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
@@ -170,6 +228,13 @@
     "#     'World Cup'\n",
     "]"
    ]
+  },
+  {
+   "source": [
+    "The following cells read the `matches.json` files for the selected competitions into a `DataFrame` object and store that object in the `wyscout.h5` HDF5 file under the key `matches`."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "code",
@@ -216,6 +281,20 @@
    ]
   },
   {
+   "source": [
+    "### Events"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "The following cells read the `events.json` files for the selected competitions into a `DataFrame` object and store that object in the `wyscout.h5` HDF5 file under the key `events/match_<match-id>`."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {},
@@ -232,6 +311,20 @@
    ]
   },
   {
+   "source": [
+    "## Convert the Wyscout data to the SPADL representation"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "The following cell calls the `convert_to_spadl` function from the `socceraction` library to convert the `wyscout.h5` HDF5 file into the `spadl.h5` HDF5 file."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {
@@ -241,12 +334,34 @@
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "...Inserting actiontypes\n...Inserting bodyparts\n...Inserting results\n...Converting games\n...Converting players\n...Converting teams\n...Generating player_games\n100%|██████████| 380/380 [01:01<00:00,  6.20game/s]\n  0%|          | 0/380 [00:00<?, ?game/s]...Converting events to actions\n100%|██████████| 380/380 [07:39<00:00,  1.21s/game]\n"
+     "text": "...Inserting actiontypes\n...Inserting bodyparts\n...Inserting results\n...Converting games\n...Converting players\n...Converting teams\n...Generating player_games\n100%|██████████| 380/380 [01:34<00:00,  4.01game/s]\n  0%|          | 0/380 [00:00<?, ?game/s]...Converting events to actions\n100%|██████████| 380/380 [07:53<00:00,  1.25s/game]\n"
     }
    ],
    "source": [
     "convert_to_spadl('wyscout.h5', 'spadl.h5')"
    ]
+  },
+  {
+   "source": [
+    "# Value game states"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "This section generates features and labels for the game states, trains a predictive machine learning model for each label, and values the game states by applying the trained machine learning models.\n",
+    "\n",
+    "1. Generate the features to describe the game states;\n",
+    "2. Generate the labels that capture the value of the game states;\n",
+    "3. Compose a dataset by selecting a set of features and the labels of the game states;\n",
+    "4. Train predictive machine learning models using the dataset;\n",
+    "5. Value the game states using the trained predictive machine learning model.\n",
+    "\n",
+    "**Note:** The code in this section is based on the [2-compute-features-and-labels.ipynb](https://github.com/ML-KULeuven/socceraction/blob/master/public-notebooks/2-compute-features-and-labels.ipynb) and [3-estimate-scoring-and-conceding-probabilities.ipynb](https://github.com/ML-KULeuven/socceraction/blob/master/public-notebooks/3-estimate-scoring-and-conceding-probabilities.ipynb) notebooks in the `socceraction` repository."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "code",
@@ -268,6 +383,20 @@
    "source": [
     "nb_prev_actions = 3"
    ]
+  },
+  {
+   "source": [
+    "## Generate game state features"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "The following cell lists a number of *feature generators* from the `features` module in the `socceraction` library. Each function expects either a `DataFrame` object containing actions (i.e., individual actions) or a list of `DataFrame` objects containing consecutive actions (i.e., game states), and returns the corresponding *feature* for the individual action or game state."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "code",
@@ -316,7 +445,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "c8e02c9197764fdf9454a2be246653d0"
+       "model_id": "d1e0d6e8dc4f4aa9b3190189ad6810bc"
       }
      },
      "metadata": {}
@@ -395,7 +524,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "81478ce66f7f462ab3c282b712d77cf7"
+       "model_id": "a3a3cfc1841b40dc99a658dccede81b5"
       }
      },
      "metadata": {}
@@ -465,7 +594,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "ecd7d1bd92214d06b69f327151be3fc2"
+       "model_id": "5255b25660764f56840ee8b5d528101a"
       }
      },
      "metadata": {}
@@ -544,7 +673,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "6b1ef01a9d1841e8b6d3d12157e01c83"
+       "model_id": "497f936856344641b29144de86c98d96"
       }
      },
      "metadata": {}
@@ -610,7 +739,7 @@
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "Wall time: 10min 1s\n"
+     "text": "Wall time: 10min 33s\nParser   : 189 ms\n"
     }
    ],
    "source": [
@@ -632,9 +761,9 @@
   {
    "source": [
     "The following cell predicts the labels for the game states using the trained XGBoost classifier. For each label:\n",
-    "1. Retrieve the model for the label;\n",
-    "2. Estimate the probabilities of the labels being `False` and `True` given the computed features;\n",
-    "3. Keep the probabilities for the `True` label;\n",
+    "1. Retrieve the model for the label<br>\n",
+    "2. Estimate the probabilities of the labels being `False` and `True` given the computed features<br>\n",
+    "3. Keep the probabilities for the `True` label<br>\n",
     "4. Store the probabilities as a `Series` object in the `dfs_predictions` `dict`."
    ],
    "cell_type": "markdown",
@@ -695,7 +824,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "3c78a6d30eb24ce882c48e7d27173c93"
+       "model_id": "f9941be6b02e4ca7b45cfcce9c63dcdd"
       }
      },
      "metadata": {}
@@ -787,7 +916,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "c71f40b6fde84a8790e49294f9e19776"
+       "model_id": "b4c5d186f13d48cf82e2d7bb6780bafd"
       }
      },
      "metadata": {}
@@ -842,7 +971,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "f8ce2de188eb40c9a191851d4cc26a94"
+       "model_id": "44eb96c9b1d84fd187a13b684fd71bca"
       }
      },
      "metadata": {}
@@ -1042,11 +1171,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "**References:**\n",
+    "* Tom Decroos, Lotte Bransen, Jan Van Haaren, and Jesse Davis. \"[Actions Speak Louder than Goals: Valuing Player Actions in Soccer.](https://arxiv.org/abs/1802.07127)\" In *Proceedings of the 25th ACM SIGKDD International Conference on Knowledge Discovery & Data Mining*, pp. 1851-1861. 2019.\n",
+    "* Luca Pappalardo, Paolo Cintia, Alessio Rossi, Emanuele Massucco, Paolo Ferragina, Dino Pedreschi, and Fosca Giannotti. \"[A Public Data Set of Spatio-Temporal Match Events in Soccer Competitions.](https://www.nature.com/articles/s41597-019-0247-7)\" *Scientific Data 6*, no. 1 (2019): 1-15."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   }
  ]
 }
